<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Pleasewait">Please wait</string>
    <string name="PageLoading">Page is loading</string>
    <string name="HeaderTitle">openIMIS Policies</string>
    <string name="HeaderEmail">admin@imis.com</string>
    <string name="Home">Home</string>
    <string name="Enrolment">Enrolment</string>
    <string name="Renewal">Renewal</string>
    <string name="Feedback">Feedback</string>
    <string name="Sync">Sync</string>
    <string name="About">About</string>
    <string name="Quit">Quit</string>
    <string name="Region">Region</string>
    <string name="District">District</string>
    <string name="Ward">Municipality</string>
    <string name="Village">Village</string>
    <string name="PovertyStatus">Poverty Status</string>
    <string name="ConfirmationType">Confirmation Type</string>
    <string name="ConfirmationNo">Confirmation No.</string>
    <string name="GroupType">Group Type</string>
    <string name="Ethnicity">Ethnicity</string>
    <string name="PermanentAddress">Permanent Address Details</string>
    <string name="Next">Next</string>
    <string name="SelectRegion">Select Region</string>
    <string name="SelectDistrict">Select District</string>
    <string name="SelectWard">Select Municipality</string>
    <string name="SelectVillage">Select Village</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SelectPovertyStatus">Select Poverty Status</string>
    <string name="SelectConfirmationType">Select confirmation type</string>
    <string name="SelectFamilyType">Select Group type</string>
    <string name="Ok">OK</string>
    <string name="FieldRequired">Please verify all the required fields marked in red border</string>
    <string name="InsuranceNumber">Insuree number</string>
    <string name="OtherNames">Other Names</string>
    <string name="LastName">Last Name</string>
    <string name="BirthDate">Birth Date</string>
    <string name="Gender">Gender</string>
    <string name="MaritalStatus">Marital Status</string>
    <string name="BeneficiaryCard">Beneficiary Card</string>
    <string name="CurrentDistrict">Current District</string>
    <string name="CurrentMunicipality">Current Municipality</string>
    <string name="CurrentVillage">Current Village</string>
    <string name="CurrentAddress">Current Address Details</string>
    <string name="Profession">Profession</string>
    <string name="Education">Education</string>
    <string name="PhoneNumber">Phone number</string>
    <string name="Email">Email</string>
    <string name="IdentificationType">Identification Type</string>
    <string name="IdentificationNumber">Identification Number</string>
    <string name="FSPDistrict">District of FSP</string>
    <string name="FSPCategory">Level of FSP</string>
    <string name="FSP">First Service Point</string>
    <string name="SelectGender">Select Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="SelectMaritalStatus">Select marital status</string>
    <string name="Married">Married</string>
    <string name="Single">Single</string>
    <string name="Divorced">Divorced</string>
    <string name="Widowed">Widowed</string>
    <string name="NotSpecified">Not specified</string>
    <string name="SelectBeneficiary">Select card status</string>
    <string name="SelectProfession">Select profession</string>
    <string name="SelectEducation">Select education</string>
    <string name="SelectIdentificationType">Select identification type</string>
    <string name="SelectHFLevel">Select HF level</string>
    <string name="Dispensary">Dispensary</string>
    <string name="HealthCentre">Health Centre</string>
    <string name="Hospital">Hospital</string>
    <string name="SelectHF">Select Health facility</string>
    <string name="Save">Save</string>
    <string name="Relation">Relationship</string>
    <string name="SelectRelationship">Select Relationship</string>
    <string name="FamilySaved">Family saved successfully</string>
    <string name="ErrorOccurred">Error occurred while processing data</string>
    <string name="ErrorInsert">Error while inserting data</string>
    <string name="ErrorUpdate">Error while updating data</string>
    <string name="InsuranceNumberExists">Member with this Insuree number already exists</string>
    <string name="Add">Add</string>
    <string name="New">New</string>
    <string name="SelectOfficer">Select Enrolment Officer</string>
    <string name="SelectProduct">Select Product</string>
    <string name="SelectMonth">Select Month</string>
    <string name="EnrolmentDate">Enrolment date</string>
    <string name="Product">Product</string>
    <string name="EffectiveDate">Effective Date</string>
    <string name="StartDate">Start Date</string>
    <string name="ExpireDate">Expire Date</string>
    <string name="Officer">Enrolment Officer</string>
    <string name="PolicyStatus">Policy Status : </string>
    <string name="PolicyValue">Policy Value : </string>
    <string name="Balance">Balance : </string>
    <string name="Contribution">Contribution : </string>
    <string name="Enquire">Enquire</string>
    <string name="Payer">Payer</string>
    <string name="PayDate">Payment Date</string>
    <string name="ContributionCategory">Contribution Category </string>
    <string name="Receipt">Receipt No </string>
    <string name="Amount">Contribution Paid</string>
    <string name="PaymentType">Payment Type</string>
    <string name="SelectPayer">Select Payer</string>
    <string name="SelectLevel">Select Level</string>
    <string name="PremiumContribution">Contribution and Others</string>
    <string name="PremiumPhotoFee">Photo Fee</string>
    <string name="SelectPaymentType"> Select Payment Type</string>
    <string name="Cash">Cash</string>
    <string name="MobilePhone">Mobile Phone</string>
    <string name="BankTransfer">Bank Transfer</string>
    <string name="ReceiptNo">Receipt No :</string>
    <string name="Expired">Expired</string>
    <string name="Active">Active</string>
    <string name="Idle">Idle</string>
    <string name="Suspended">Suspended</string>
    <string name="ReceiptNotUnique">Receipt number must be unique</string>
    <string name="PleaseDeletePremium">Policy has contribution. Please delete contributions first</string>
    <string name="PolicyDeleted">Policy deleted successfully</string>
    <string name="PremiumDeleted">Contribution deleted successfully</string>
    <string name="InsureeDeleted">Insuree deleted successfully</string>
    <string name="IsHeadDelete">You can not delete the head of the family.</string>
    <string name="FamilyHasPolicy">Family has policy please delete the policy first</string>
    <string name="InsureeNotDeleted">Insuree has not deleted</string>
    <string name="FamilyDeleted">Family deleted</string>
    <string name="Scan">Scan</string>
    <string name="InsureeName">Insuree Name</string>
    <string name="ReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
    <string name="NoSDCard">openIMIS Policies needs external memory card to run. Please insert memory card and restart the application.</string>
    <string name="ForceClose">Force Close</string>
    <string name="MissingInsuranceNumber">Please enter the Insuree number</string>
    <string name="InvalidInsuranceNumber">Invalid Insuree number</string>
    <string name="GetingInsuuree">Getting insuree info…</string>
    <string name="GetingSnapShotReport">Getting Snap Shots Report…</string>
    <string name="GetingCummulativeReport">Getting Cumulative Report…</string>
    <string name="RecordNotFound">Member with this Insuree number does not exist.</string>
    <string name="NoRenewalFound">No renewal found</string>
    <string name="NoInternet">Please check your internet connection.</string>
    <string name="FileDoesntBelongHere">Process Failed, Wrong File or Enrolment Officer code.</string>
    <string name="Submit">Submit</string>
    <string name="DiscontinuePolicy">Discontinue this policy</string>
    <string name="DiscontinuePolicyQ">Do you want to discontinue this policy?</string>
    <string name="ProductCode">Product Code</string>
    <string name="Loading">loading</string>
    <string name="UploadedSuccessfully">Data uploaded on the server successfully.</string>
    <string name="ServerRejected">Data is rejected by the server. Data is moved to the rejected folder of the phone.</string>
    <string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folders to verify the server response.</string>
    <string name="MissingOfficerCode">Please enter Enrolment Officer code</string>
    <string name="SavedOnSDCard">File is saved on external storage.</string>
    <string name="Uploading">Uploading…</string>
    <string name="NoFeedbackFound">No feedback found</string>
    <string name="InternetRequired">Internet connection is required to view the statistics.</string>
    <string name="GetStats">Preview</string>
    <string name="NoStatFound">No data found</string>
    <string name="Statistics">Statistics</string>
    <string name="ClaimId">Claim Code</string>
    <string name="Question1">Have you been treated at the facility on the said date?</string>
    <string name="Question2">Have you been asked for a payment to the facility or staff?</string>
    <string name="Question3">Have drugs been prescribed to you?</string>
    <string name="Question4">Did you get drugs from the facility?</string>
    <string name="Assessment">How satisfied are you with the care you received at the health facility? Rate on a scale 1–5 (1= not satisfied; 5= very satisfied)</string>
    <string name="UploadingFeedback">Uploading feedback…</string>
    <string name="UploadAllFeedback">Upload all feedback</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="UploadEnrollment">Upload Enrolments</string>
    <string name="EnrollmentXML">Create Enrolments XML</string>
    <string name="UploadRenewals">Upload Renewals</string>
    <string name="UploadFeedBack">Upload FeedBacks</string>
    <string name="DownloadMaster">Download Master Data</string>
    <string name="NumberOfNP">Number of New Policies</string>
    <string name="NumberOfRP">Number of renewed Policies</string>
    <string name="NumberOfEP">Number of Expired Policies</string>
    <string name="NumberOfSP">Number of Suspended Polices</string>
    <string name="AmountCC">Amount of collected contribution</string>
    <string name="CreateFeedbackXML">Create Feedback XML</string>
    <string name="CreateRenewalXML">Create Renewals XML</string>
    <string name="user_name">Username</string>
    <string name="OverViewPolicies">Overview Policies</string>
    <string name="OverViewControlNumber">Overview Control Numbers</string>
    <string name="clear">Clear</string>
    <string name="CheckCommission">Check Commission</string>
    <string name="year">Year</string>
    <string name="paid">Paid</string>
    <string name="check">Check</string>
    <string name="get">Get</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="not_enrolled_policies">Not Enrolled Policies</string>
    <string name="languageOfSMS">Language Of SMS</string>
    <string name="approvalOfSMS">Approval Of SMS</string>
    <string name="GetPaymentCNOnline">Get payment CN for enrolled policies</string>
    <string name="GetPaymentCNOffline">Get payment CN for not enrolled policies</string>
    <string name="OverviewPaymentCN">Overview payment CN</string>
    <string name="BulkCN">Bulk Control Numbers</string>
</resources>