<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spRegion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_required"/>

            <TextView
                android:text="@string/District"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spDistrict"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_required"/>

            <TextView
                android:text="@string/Ward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spWard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_required"/>

            <TextView
                android:text="@string/Village"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spVillage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_required"/>

            <TextView
                android:text="@string/PovertyStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spPovertyStatus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:text="@string/SelectFamilyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spFamilyType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:text="@string/ConfirmationType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spConfirmationType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:text="@string/approvalOfSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spApprovalSMS"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"/>

            <TextView
                android:text="@string/languageOfSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/spLanguageSMS"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/spinner_background"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:text="@string/Next"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:enabled="false"
                android:background="@drawable/button_background"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>