<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.openimis.imispolicies.PaymentOverview">

    <TextView
        android:id="@+id/OverViewPolicies"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/GetPaymentCNOnline"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/NotEnrolledPolicies"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/GetPaymentCNOffline"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/OverViewControlNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/OverviewPaymentCN"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/BulkControlNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/BulkCN"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/CheckCommission"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/CheckCommission"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="monospace" />
</LinearLayout>
